add logic to get file
